vault/deployment.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: web
---
apiVersion: v1
kind: Service
metadata:
  name: vault
  namespace: web
spec:
  selector:
    app: vault
  ports:
    - port: 8200
      targetPort: 8200
      protocol: TCP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vault
  namespace: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vault
  template:
    metadata:
      labels:
        app: vault
    spec:
      containers:
        - name: vault
          image: hashicorp/vault:1.15.4
          ports:
            - containerPort: 8200
          volumeMounts:
            - name: vault-storage
              mountPath: /vault/file
      volumes:
        - name: vault-storage
          persistentVolumeClaim:
            claimName: vault-pvc
